--- a/src/components/video-details/video-details.component.html
+++ b/src/components/video-details/video-details.component.html
@@ -14,7 +14,7 @@
     [showAlternativesButton]="
       !!(
         selectedVideo.movieAlternatives &&
-        (selectedVideo.movieAlternatives?.alternatives?.length || 0) > 1
+        (selectedVideo.movieAlternatives.alternatives.length || 0) > 1
       )
     "
     (openAlternatives)="onOpenMovieAlternatives()"
