--- a/src/components/files-selector/files-selector.component.html
+++ b/src/components/files-selector/files-selector.component.html
@@ -3,14 +3,6 @@
     [checked]="directory()"
     (change)="onToggleDirectory($event.checked)"
     matTooltip="Scan directory"
-    >{{ (directory() ? 'Scan' : 'Don\'t scan') }} directory</mat-slide-toggle
+    >{{ directory() ? "Scan" : "Don't scan" }} directory</mat-slide-toggle
   >
-  <button
-    mat-raised-button
-    (click)="onAddFiles()"
-    matTooltip="Choose files to optimize"
-  >
-    <mat-icon>add</mat-icon>
-    <span>Choose files</span>
-  </button>
 </div>
