--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,10 @@
   --app-hover: #f5f5f5;
   --app-shadow: rgba(0, 0, 0, 0.1);
   border-radius: 12px;
+  .advanced-appbar {
+    border-top-right-radius: 12px;
+    border-top-left-radius: 12px;
+  }
 }
 
 .dark {
