--- a/src/components/videos-table/videos-table.component.html
+++ b/src/components/videos-table/videos-table.component.html
@@ -134,10 +134,11 @@
       </p>
     </div>
   </ng-template>
-  }
+  } @if (selectedVideo()) {
   <app-video-details
-    [selectedVideo]="selectedVideo()"
+    [selectedVideo]="selectedVideo()!"
     (closeDetails)="onCloseDetails()"
   >
   </app-video-details>
+  }
 </div>
